@@ -1,0 +1,115 @@
+# This file is not really needed. All the key definitions correspond exactly
+# to the default values AdaBrowse uses anyway when no configuration file at
+# all is specified.
+
+# This is a comment line. It is skipped, just like the empty lines
+# in the file.
+
+# Define a command to be executed when no ASIS information for a unit can
+# be found. The command must accept GNAT-like "-I" options, and you should
+# have given these "-I" options to AdaBrowse, too.
+
+compile           = gcc \
+                    -c -gnatc -gnatt
+
+# Define the URL of the style sheet the generated HTML should use. The URL
+# should be relative to the final location of the generated HTML files.
+
+style_sheet       = adabrowse.css
+
+# The default charset:
+
+char_set          = ISO-8859-1  # This is Latin-1
+
+# Define the body tag to use. Note the trailing comment.
+
+body              = <BODY>
+# <BODY BGCOLOR="#FFFFF4"> # Not quite white
+
+# Define what to put around certain texts.
+
+# Note the line continuation below:
+title.before      = <TABLE WIDTH="100%" CLASS="title" BORDER=0 CELLSPACING=0 \
+                     CELLPADDING=5><TR><TD><H2>
+title.after       = </H2></TD></TR></TABLE>
+
+sub_title.before  = <H3 CLASS="subtitle">
+sub_title.after   = </H3>
+
+keyword.before    = <STRONG>
+keyword.after     = </STRONG>
+
+attribute.before  = <STRONG>
+attribute.after   = </STRONG>
+
+definition.before = <SPAN CLASS="definition">
+definition.after  = </SPAN>
+
+comment.before    = <EM><SPAN CLASS="comment">
+comment.after     = </SPAN></EM>
+
+literal.before    = <SPAN CLASS="literal">
+literal.after     = </SPAN>
+
+# Note: the tag classes are defined in the style sheet.
+
+# Define where to find descriptions for certain items:
+
+Description.Context_Clause            = After (1)
+Description.Clause                    = After (1)
+Description.Subprogram                = After (1)
+Description.Renaming                  = After (1)
+Description.Instantiation             = After (1)
+Description.Constant                  = After (1)
+Description.Exception                 = After (1)
+Description.Pragma                    = After (1)
+Description.Rep_Clause                = After (1)
+Description.Type                      = After (1), Before
+Description.Object                    = After (1)
+Description.Container                 = Before, Inside
+Description.Task                      = Before, Inside                    
+Description.Protected                 = Before, Inside
+Description.Package                   = Before, Inside
+Description.Library                   = Before, After
+Description.Library_Subprogram        = Before, After
+Description.Library_Package           = Before, After
+Description.Library_Renaming          = Before, After
+Description.Library_Instantiation     = Before, After
+
+No_XRef     =
+Exclude     =
+
+# XRef    =
+# Include =
+
+# The following key is commented out so as not to override a -g flag
+# on the command line.
+
+# Refs_to_Standard = False
+
+Index_Title = BFD Library
+
+Index_XRef = TARGET="main"
+Index_Xref = TARGET='main'
+
+#Index_Title.Unit_Index      = Unit Index
+#Index_Title.Procedure_Index = Subprogram Index
+#Index_Title.Type_Index      = Type Index
+
+User_Tag.Copyright.Before = <!--
+User_Tag.Copyright.After = -->
+User_Tag.Copyright.Enabled = false
+
+Format."--" = standard
+
+# The remaining keys cannot be defined here, for they all are empty
+# by default:
+
+#Path.Full_Unit_Name_Prefix = Some URL prefix
+
+
+
+index_XRef = TARGET="main"
+
+
+
